--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <i class="fab fa-accessible-icon"></i>
+    <h1>Hello World</h1>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
